--- a/README.rdoc
+++ b/README.rdoc
@@ -1,3 +1,8 @@
+# Machine_time
+
+# Description
+
+
 == rails project -- machine_time
 
 A machine-gazer who monitors `machine-time' of analytical instruments
