--- a/README.rdoc
+++ b/README.rdoc
@@ -1,3 +1,9 @@
 == rails project -- machine_time
 
 A machine-gazer who monitors `machine-time' of analytical instruments
+
+== Description
+
+A machine-gazer who monitors `machine-time' of analytical instruments.
+This program is with web interface.  The session can be controlled
+remotely by a command-line tool provided by `gem package -- godigo'.
